--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,5 +2,9 @@ pre-commit:
   commands:
     format:
       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc,astro,css,yaml,yml}"
-      run: prettier --write .
+      run: bun run prettier --write {staged_files}
+      stage_fixed: true
+    lint:
+      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
+      run: bun run biome lint --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
       stage_fixed: true
