--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tw-animate-css": "^1.3.4"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.0.0-beta.6",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@iconify-json/lucide": "^1.2.49",
     "lefthook": "^1.11.13",
