--- a/package.json
+++ b/package.json
@@ -8,38 +8,50 @@
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier --write .",
+    "lint": "biome lint --write .",
     "registry:build": "bun ./scripts/build-registry.ts"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
     "@astrojs/solid-js": "^5.1.0",
+    "@corvu/calendar": "^0.1.2",
+    "@corvu/drawer": "^0.2.4",
+    "@corvu/otp-field": "^0.1.4",
+    "@corvu/resizable": "^0.2.5",
     "@kobalte/core": "^0.13.10",
     "@kobalte/tailwindcss": "^0.9.0",
     "@nanostores/persistent": "^1.0.0",
     "@nanostores/solid": "^1.0.0",
     "@tailwindcss/vite": "^4.1.10",
-    "astro": "^5.9.3",
+    "@tanstack/solid-table": "^8.21.3",
+    "astro": "^5.10.0",
     "astro-expressive-code": "^0.41.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-solid": "^0.516.0",
+    "cmdk-solid": "^1.1.2",
+    "embla-carousel-solid": "^8.6.0",
+    "lucide-solid": "^0.518.0",
     "nanostores": "^1.0.1",
+    "overlayscrollbars": "^2.11.4",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-expressive-code": "^0.41.2",
+    "rehype-slug": "^6.0.0",
     "shadcn": "^2.7.0-canary.0",
     "solid-js": "^1.9.7",
+    "solid-sonner": "^0.2.8",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
-    "tw-animate-css": "^1.3.4"
+    "tw-animate-css": "^1.3.4",
+    "vite-plugin-lucide-preprocess": "^1.3.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.0.0-beta.6",
+    "@biomejs/biome": "^2.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@iconify-json/lucide": "^1.2.49",
     "lefthook": "^1.11.13",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.12",
-    "rimraf": "^6.0.1",
-    "unplugin-icons": "^22.1.0"
-  },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+    "rimraf": "^6.0.1"
+  }
 }
