--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@kobalte/tailwindcss": "^0.9.0",
     "@nanostores/persistent": "^1.0.0",
     "@nanostores/solid": "^1.0.0",
+    "@solid-primitives/keyboard": "^1.3.3",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/solid-table": "^8.21.3",
     "astro": "^5.10.0",
+    "astro-compressor": "^1.0.0",
     "astro-expressive-code": "^0.41.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,6 +37,7 @@
     "lucide-solid": "^0.518.0",
     "nanostores": "^1.0.1",
     "overlayscrollbars": "^2.11.4",
+    "recharts": "^3.0.2",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-expressive-code": "^0.41.2",
     "rehype-slug": "^6.0.0",
@@ -43,6 +46,7 @@
     "solid-sonner": "^0.2.8",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
+    "ts-morph": "^26.0.0",
     "tw-animate-css": "^1.3.4",
     "vite-plugin-lucide-preprocess": "^1.3.1"
   },
